# suanPan

./: .clang-format  .codacy.yml  .config.cmake  .gitattributes  .gitignore  .lgtm.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  appveyor.yml  snapcraft.yaml  snapcraft_core20.yaml  suanPan.cpp  suanPan.h
.github/: .codecov.yml
.github/workflows/: dev.yml  master-mkl-vtk.yml  master-vtk.yml  master.yml
Constraint/: CMakeLists.txt  Constraint  Constraint.cpp  Constraint.h  ConstraintParser.cpp  ConstraintParser.h  Embed2D.cpp  Embed2D.h  MPC.cpp  ParticleCollision.cpp  ParticleCollision.h  ParticleCollision2D.cpp  ParticleCollision2D.h  ParticleCollision3D.cpp  ParticleCollision3D.h  RigidWallMultiplier.cpp  RigidWallMultiplier.h  RigidWallPenalty.cpp  RigidWallPenalty.h
Constraint/BC/: BC  CMakeLists.txt  GroupMultiplierBC.cpp  GroupMultiplierBC.h  GroupPenaltyBC.cpp  GroupPenaltyBC.h  MultiplierBC.cpp  MultiplierBC.h  PenaltyBC.cpp  PenaltyBC.h
Constraint/Criterion/: CMakeLists.txt  Criterion  Criterion.cpp  Criterion.h  MaxDisplacement.cpp  MaxDisplacement.h  MaxHistory.cpp  MaxHistory.h  MaxResistance.cpp  MaxResistance.h  MinDisplacement.cpp  MinDisplacement.h  MinResistance.cpp  MinResistance.h  NodeBasedCriterion.cpp  NodeBasedCriterion.h  StrainEnergyEvolution.cpp  StrainEnergyEvolution.h
Converger/: AbsDisp.cpp  AbsDisp.h  AbsError.cpp  AbsError.h  AbsIncreDisp.cpp  AbsIncreDisp.h  AbsIncreEnergy.cpp  AbsIncreEnergy.h  AbsResidual.cpp  AbsResidual.h  CMakeLists.txt  Converger  Converger.cpp  Converger.h  FixedNumber.cpp  FixedNumber.h  RelDisp.cpp  RelDisp.h  RelError.cpp  RelError.h  RelIncreDisp.cpp  RelIncreDisp.h  RelIncreEnergy.cpp  RelIncreEnergy.h  RelResidual.cpp  RelResidual.h
Database/: Database.cpp  Database.h  HDF.cpp  HDF.h  SQL.cpp  SQL.h
Developer/Element/: CMakeLists.txt  (+2 more)
Developer/ModuleBundle/: CMakeLists.txt
Domain/: CMakeLists.txt  Domain  Domain.cpp  Domain.h  DomainBase.cpp  DomainBase.h  ElementGroup.cpp  ElementGroup.h  ExternalModule.cpp  ExternalModule.h  Factory.hpp  Group.cpp  Group.h  GroupGroup.cpp  GroupGroup.h  Node.cpp  Node.h  NodeGroup.cpp  NodeGroup.h  Storage.hpp  Tag.cpp  Tag.h
Element/: CMakeLists.txt  Element  Element.cpp  Element.h  ElementBase.h  ElementParser.cpp  ElementParser.h  ElementTemplate.cpp  ElementTemplate.h  MaterialElement.cpp  MaterialElement.h  SectionElement.cpp  SectionElement.h
Enhancement/: AddAssociation.bat  Resharper.DotSettings  suanPan.sh  suanPan.sublime-completions  suanPan.sublime-syntax
Load/: BodyForce.cpp  BodyForce.h  CMakeLists.txt  GroupBodyForce.cpp  GroupBodyForce.h  GroupNodalDisplacement.cpp  GroupNodalDisplacement.h  GroupNodalForce.cpp  GroupNodalForce.h  Load  Load.cpp  Load.h  NodalAcceleration.cpp  NodalAcceleration.h  NodalDisplacement.cpp  NodalDisplacement.h  NodalForce.cpp  NodalForce.h
Material/: CMakeLists.txt  ExternalMaterial.cpp  ExternalMaterial.h  ExternalMaterialData.h  Material  Material.cpp  Material.h  MaterialBase.h  MaterialParser.cpp  MaterialParser.h  MaterialTemplate.cpp  MaterialTemplate.h  MaterialTester.cpp  MaterialTester.h
Recorder/: AmplitudeRecorder.cpp  AmplitudeRecorder.h  CMakeLists.txt  EigenRecorder.cpp  EigenRecorder.h  ElementRecorder.cpp  ElementRecorder.h  FrameRecorder.cpp  FrameRecorder.h  GlobalMassRecorder.cpp  GlobalMassRecorder.h  GlobalRecorder.cpp  GlobalRecorder.h  GlobalStiffnessRecorder.cpp  GlobalStiffnessRecorder.h  GroupElementRecorder.cpp  GroupElementRecorder.h  GroupNodeRecorder.cpp  GroupNodeRecorder.h  GroupSumRecorder.cpp  GroupSumRecorder.h  NodeRecorder.cpp  NodeRecorder.h  OutputType.cpp  OutputType.h  Recorder  Recorder.cpp  Recorder.h  SumRecorder.cpp  SumRecorder.h  VisualisationRecorder.cpp  VisualisationRecorder.h
Resource/: resource.h  suanPan.rc  suanPan_gcc.rc
Section/: CMakeLists.txt  ParameterType.h  Section  Section.cpp  Section.h  SectionParser.cpp  SectionParser.h
Solver/: Arnoldi.cpp  Arnoldi.h  BFGS.cpp  BFGS.h  CMakeLists.txt  MPDC.cpp  MPDC.h  Newton.cpp  Newton.h  Ramm.cpp  Ramm.h  Solver  Solver.cpp  Solver.h
Step/: ArcLength.cpp  ArcLength.h  Bead.cpp  Bead.h  Buckle.cpp  Buckle.h  CMakeLists.txt  Dynamic.cpp  Dynamic.h  Frequency.cpp  Frequency.h  Optimization.cpp  Optimization.h  Static.cpp  Static.h  Step.cpp  Step.h
Toolbox/: CMakeLists.txt  Converter.cpp  Converter.h  IntegrationPlan.cpp  IntegrationPlan.h  Quaternion.hpp  Toolbox  argumentParser.cpp  argumentParser.h  arpack_wrapper.cpp  arpack_wrapper.h  commandParser.cpp  commandParser.h  debug.cpp  debug.h  shapeFunction.h  sort_color.cpp  sort_color.h  sort_rcm.cpp  sort_rcm.h  tensorToolbox.cpp  tensorToolbox.h  utility.cpp  utility.h
Toolbox/amd-src/: CMakeLists.txt
Toolbox/feast-src/: CMakeLists.txt
Toolbox/lapack-ext/: CMakeLists.txt
Toolbox/superlu-src/: CMakeLists.txt  ccolumn_bmod.c  ccolumn_dfs.c  ccopy_to_ucol.c  cdiagonal.c  cgscon.c  cgsequ.c  cgsisx.c  cgsitrf.c  cgsrfs.c  cgssv.c  cgssvx.c  cgstrf.c  cgstrs.c  clacon2.c  clangs.c  claqgs.c  cldperm.c  cmemory.c  colamd.c  colamd.h  cpanel_bmod.c  cpanel_dfs.c  cpivotL.c  creadMM.c  creadhb.c  creadrb.c  creadtriple.c  csnode_dfs.c  csp_blas2.c  cutil.c  dcolumn_bmod.c  dcolumn_dfs.c  dcomplex.c  dcopy_to_ucol.c  ddiagonal.c  dgscon.c  dgsequ.c  dgsisx.c  dgsitrf.c  (+111 more)
Toolbox/superlumt-src/: CMakeLists.txt  cgscon.c  cgsequ.c  cgsrfs.c  cgstrs.c  cholnzcnt.c  clacon.c  clangs.c  claqgs.c  colamd.c  creadhb.c  creadrb.c  csp_blas2.c  dcomplex.c  dgscon.c  dgsequ.c  dgsrfs.c  dgstrs.c  dlamch.c  dlangs.c  dlaqgs.c  dreadhb.c  dreadrb.c  dsp_blas2.c  get_perm_c.c  heap_relax_snode.c  lsame.c  mmd.c  pcgssv.c  pcgssvx.c  pcgstrf_bmod1D.c  pcgstrf_bmod1D_mv2.c  pcgstrf_bmod2D.c  pcgstrf_bmod2D_mv2.c  pcgstrf_column_bmod.c  pcgstrf_column_dfs.c  pcgstrf_init.c  pcgstrf_panel_bmod.c  pcgstrf_panel_dfs.c  pcgstrf_pivotL.c  (+78 more)
UnitTest/: CMakeLists.txt  CatchTest.cpp  CatchTest.h  TestMaterial.cpp  TestMode.cpp  TestNURBS.cpp  TestQuaternion.cpp  TestShape.cpp  TestTensor.cpp  TestUtility.cpp
(+1239 files in other folders)
